language/move-prover/tests/sources/functional/fixed_point_arithm.exp
Move prover returns: exiting with boogie verification errors
error: post-condition does not hold

     ┌── tests/sources/functional/fixed_point_arithm.move:126:9 ───
     │
 126 │         ensures result >= x; // disproved
     │         ^^^^^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/fixed_point_arithm.move:120:5: div_mul_incorrect
     =         x = <redacted>,
     =         y = <redacted>,
     =         result = <redacted>
     =     at ../stdlib/modules/FixedPoint32.move:144:5: get_raw_value
     =         num = <redacted>,
     =         result = <redacted>
     =     at ../stdlib/modules/FixedPoint32.move:145:9: get_raw_value
     =     at tests/sources/functional/fixed_point_arithm.move:121:39: div_mul_incorrect
     =     at ../stdlib/modules/FixedPoint32.move:137:5: create_from_raw_value
     =         value = <redacted>,
     =         result = <redacted>
     =     at ../stdlib/modules/FixedPoint32.move:138:9: create_from_raw_value
     =     at tests/sources/functional/fixed_point_arithm.move:122:59: div_mul_incorrect
     =     at ../stdlib/modules/FixedPoint32.move:137:5: create_from_raw_value
     =     at ../stdlib/modules/FixedPoint32.move:138:9: create_from_raw_value
     =     at tests/sources/functional/fixed_point_arithm.move:123:53: div_mul_incorrect

error: post-condition does not hold

     ┌── tests/sources/functional/fixed_point_arithm.move:104:9 ───
     │
 104 │         ensures result >= x; // disproved
     │         ^^^^^^^^^^^^^^^^^^^^
     │
     =     at tests/sources/functional/fixed_point_arithm.move:98:5: mul_div_incorrect
     =         x = <redacted>,
     =         y = <redacted>,
     =         result = <redacted>
     =     at ../stdlib/modules/FixedPoint32.move:144:5: get_raw_value
     =         num = <redacted>,
     =         result = <redacted>
     =     at ../stdlib/modules/FixedPoint32.move:145:9: get_raw_value
     =     at tests/sources/functional/fixed_point_arithm.move:99:39: mul_div_incorrect
     =     at ../stdlib/modules/FixedPoint32.move:137:5: create_from_raw_value
     =         value = <redacted>,
     =         result = <redacted>
     =     at ../stdlib/modules/FixedPoint32.move:138:9: create_from_raw_value
     =     at tests/sources/functional/fixed_point_arithm.move:100:61: mul_div_incorrect
     =     at ../stdlib/modules/FixedPoint32.move:137:5: create_from_raw_value
     =     at ../stdlib/modules/FixedPoint32.move:138:9: create_from_raw_value
     =     at tests/sources/functional/fixed_point_arithm.move:101:51: mul_div_incorrect

error: post-condition does not hold

    ┌── tests/sources/functional/fixed_point_arithm.move:25:9 ───
    │
 25 │         ensures result == 1; // disproved
    │         ^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/fixed_point_arithm.move:20:5: multiply_0_x_incorrect
    =         x = <redacted>,
    =         result = <redacted>
    =     at tests/sources/functional/fixed_point_arithm.move:21:23: multiply_0_x_incorrect

error: post-condition does not hold

    ┌── tests/sources/functional/fixed_point_arithm.move:64:9 ───
    │
 64 │         ensures result != (x.value >> 32); // disproved
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/fixed_point_arithm.move:58:5: multiply_1_x_incorrect
    =         x = <redacted>,
    =         result = <redacted>
    =     at tests/sources/functional/fixed_point_arithm.move:59:23: multiply_1_x_incorrect

error: post-condition does not hold

    ┌── tests/sources/functional/fixed_point_arithm.move:41:9 ───
    │
 41 │         ensures result == 1; // disproved
    │         ^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/fixed_point_arithm.move:36:5: multiply_x_0_incorrect
    =         x = <redacted>,
    =         result = <redacted>
    =     at ../stdlib/modules/FixedPoint32.move:137:5: create_from_raw_value
    =         value = <redacted>,
    =         result = <redacted>
    =     at ../stdlib/modules/FixedPoint32.move:138:9: create_from_raw_value
    =     at tests/sources/functional/fixed_point_arithm.move:37:53: multiply_x_0_incorrect

error: post-condition does not hold

    ┌── tests/sources/functional/fixed_point_arithm.move:80:9 ───
    │
 80 │         ensures result != x; // disproved
    │         ^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/fixed_point_arithm.move:75:5: multiply_x_1_incorrect
    =         x = <redacted>,
    =         result = <redacted>
    =     at tests/sources/functional/fixed_point_arithm.move:76:53: multiply_x_1_incorrect
